# Molecule-Bond-Orders

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  clean.sh  environment.yml  interactive.sh  run.sh  test.sh
atoms/: C2H4.xyz  H2O.xyz  HCN.xyz  HF.xyz  HO.xyz
project_output/: stats.stdout
project_output/final_proj/: C2H4.stdout  H2.stdout  H2O.stdout  HCN.stdout  HF.stdout  HO.stdout
project_output/final_proj_hdf5/: C2H4.hdf5  H2.hdf5  H2O.hdf5  HCN.hdf5  HF.hdf5  HO.hdf5
project_output/run_configs/: C2H4.json  H2.json  H2O.json  HCN.json  HF.json  HO.json
sample_input/final_proj/: C2H4.json  H2.json  H2O.json  HCN.json  HF.json  HO.json
src/: bond_order.cpp  calculate_stats.cpp  electron_density.cpp  fock_functions.cpp  main.cpp  molecule_bond_order.hpp  molecule_functions.cpp  molecule_visualization.hpp  plotting.py  sto3g_functions.cpp  visualize.cpp
tests/: conftest.py  test_final_proj.py  test_psi4_reference.py
tests/test_checks/: C2H4.csv  H2O.csv  HCN.csv  HO.csv
